--- a/hithesis.dtx
+++ b/hithesis.dtx
@@ -1602,8 +1602,8 @@ delim_1 "\\hspace*{\\fill}"
         \underline{\makebox[432bp]{~}} \\
         \underline{\makebox[432bp]{~}} \\
         \underline{\makebox[432bp]{~}} \\
-        指导教师签字：\underline{\makebox[120bp]{~}} \makebox[24bp]{~}
-        检查日期：\underline{\makebox[144bp]{~}} \\
+        指导教师签字：\underline{\makebox[130bp]{~}} \makebox[24bp]{~}
+        检查日期：\underline{\makebox[130bp]{~}} \\
       \end{tabular}
     \end{figure}
     \else
@@ -1616,8 +1616,8 @@ delim_1 "\\hspace*{\\fill}"
         \underline{\makebox[432bp]{~}} \\
         \underline{\makebox[432bp]{~}} \\
         \underline{\makebox[432bp]{~}} \\
-        指导教师签字：\underline{\makebox[120bp]{~}} \makebox[24bp]{~}
-        检查日期：\underline{\makebox[144bp]{~}} \\
+        指导教师签字：\underline{\makebox[130bp]{~}} \makebox[24bp]{~}
+        检查日期：\underline{\makebox[130bp]{~}} \\
       \end{tabular}
     \end{figure}
     \else
@@ -2630,6 +2630,7 @@ delim_1 "\\hspace*{\\fill}"
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% 目前本科生开题/中期报告封面，和教务处模板还有区别，主要表现在题目等间距不同，底部“哈尔滨工业大学教务处制”无法设置隶
 %% 书字体(虽然ctex-fontset-siyuan.def 定义了\lishu 命令，但使用报错，暂无精力调试，猜测是字体问题，部分Windows用户可以尝试改为\lishu)。 _modified by hithesis-alpha
+%% \lishu 问题已解决 by hithesis-beta <https://github.com/specialpointcentral/hithesis-beta/commit/00310a6abfa54ecbdbdafa0f38ca04752cb10fd0>
 
 \newcommand{\hit@first@titlepage@bachelor}{
 \ifthenelse%
