--- a/body/introduction.tex
+++ b/body/introduction.tex
@@ -591,5 +591,5 @@ only}
 \bibliography{reference}	%使用开题/中期报告时，如果需要参考文献，保留此行，并注释掉主文档main.tex中的\bibliography{reference}行，否则会把参考文献添加到新的一页。
 %正常毕业论文时，仅需要保留主文档中\bibliography{reference}行，并去掉此行。
 
-\makecomment %针对威海校区模板，加入指导教师评语
-%这部分仅对：威海校区本科生开题中期部分起作用，注意设置。
+%\makecomment %针对威海校区模板，加入指导教师评语
+%该命令仅对：威海校区本科生开题中期部分起作用，其它校区选项请注释该命令否则会报错。
